--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,28 @@
 /node_modules
-/public/storage
-/public/hot
-/storage/*.key
 /vendor
 /.idea
-app/Http/Controllers/Frontend/HomeController.php
 storage/app/public/*
-Homestead.json
-Homestead.yaml
 .env
+.env.example
+.gitignore
+app/
+artisan
+bootstrap/
+composer.json
+composer.lock
+config/
+database/
+npm-debug.log
+package.json
+phpunit.xml
+public/
+readme.md
+resources/
+routes/
+server.php
+storage/
+tests/
+webpack.config.js
+webpack.config____.js
+webpack.mix.js
+yarn.lock
